--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -100,7 +100,7 @@ pre {
 }
 
 [data-theme='dark'] pre {
-  background-color: #2b2b2c !important;
+  background-color: #28282c !important;
 }
 
 code {
@@ -108,7 +108,7 @@ code {
 }
 
 [data-theme='dark'] code {
-  background-color: #2b2b2c !important;
+  background-color: #28282c !important;
 }
 
 hr {
@@ -293,6 +293,10 @@ main>div.container>div.row>div:nth-child(2) {
 
 [data-theme='dark'] .table-of-contents__link--active {
   color: #ffffff;
+}
+
+div:has(pre) {
+  box-shadow: none !important;
 }
 
 div.pagination-nav__label {
