fix: some page styles and send-txs-on-axon pics fix (#22)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,400i,500,600,700,700i');
 
 :root {
   --ifm-color-primary: #000000;
