--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,400i,500,600,600i,700,700i');
+@import url(./fonts.css);
 
 :root {
   --ifm-color-primary: #000000;
